--- a/streampipes-processors-transformation-jvm/development/.env
+++ b/streampipes-processors-transformation-jvm/development/.env
@@ -15,5 +15,6 @@
 #
 
 SP_PORT=6060
-SP_HOST=localhost
-SP_ICON_HOST=localhost
+SP_HOST=host.docker.internal
+SP_DEBUG=true
+SP_ICON_HOST=host.docker.internal
