--- a/services/kafka-rest/docker-compose.yml
+++ b/services/kafka-rest/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - zookeeper
     environment:
       - ZK_CONNECTION_STRING=zookeeper:2181
-      - KAFKA_REST_HOST_NAME=${SP_HOST}
+      - KAFKA_REST_HOST_NAME=kafka-rest
       - KAFKA_REST_ZOOKEEPER_CONNECT=zookeeper:2181
     networks:
       spnet:
