--- a/templates/docker-compose.lite.yml
+++ b/templates/docker-compose.lite.yml
@@ -175,6 +175,7 @@ services:
     image: "${SP_REGISTRY_PE}/sources-watertank-simulator:${SP_VERSION}"
     depends_on:
       - "consul"
+      - "kafka"
     networks:
       spnet:
 
