--- a/pom.xml
+++ b/pom.xml
@@ -826,6 +826,8 @@
                                 </goals>
                                 <configuration>
                                     <additionalparam>-Xdoclint:none</additionalparam>
+                                    <doclint>none</doclint>
+                                    <source>8</source>
                                 </configuration>
                             </execution>
                         </executions>
