--- a/streampipes-wrapper-standalone/pom.xml
+++ b/streampipes-wrapper-standalone/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<groupId>org.streampipes</groupId>
 		<artifactId>streampipes-parent</artifactId>
-		<version>0.65.0-SNAPSHOT</version>
+		<version>0.65.0</version>
 	</parent>
 
 	<artifactId>streampipes-wrapper-standalone</artifactId>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.streampipes</groupId>
 			<artifactId>streampipes-wrapper</artifactId>
-			<version>0.65.0-SNAPSHOT</version>
+			<version>0.65.0</version>
 		</dependency>
 	</dependencies>
 </project>
