--- a/streampipes-app-file-export/pom.xml
+++ b/streampipes-app-file-export/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>streampipes-parent</artifactId>
         <groupId>org.streampipes</groupId>
-        <version>0.65.1-SNAPSHOT</version>
+        <version>0.65.0</version>
     </parent>
 
     <name>StreamPipes App File Export</name>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-storage-couchdb</artifactId>
-            <version>0.65.1-SNAPSHOT</version>
+            <version>0.65.0</version>
         </dependency>
 
         <!-- External dependencies -->
