--- a/archetypes/streampipes-archetype-pe-sinks-jvm/pom.xml
+++ b/archetypes/streampipes-archetype-pe-sinks-jvm/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
-        <version>0.65.0</version>
+        <version>0.65.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>streampipes-archetype-pe-sinks-jvm</artifactId>
