--- a/streampipes-rest-shared/pom.xml
+++ b/streampipes-rest-shared/pom.xml
@@ -20,7 +20,7 @@
 	<parent>
 		<artifactId>streampipes-parent</artifactId>
 		<groupId>org.streampipes</groupId>
-		<version>0.65.0</version>
+		<version>0.65.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>org.streampipes</groupId>
 			<artifactId>streampipes-commons</artifactId>
-			<version>0.65.0</version>
+			<version>0.65.1-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.httpcomponents</groupId>
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>org.streampipes</groupId>
 			<artifactId>streampipes-serializers</artifactId>
-			<version>0.65.0</version>
+			<version>0.65.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- External dependencies -->
