--- a/streampipes-storage-api/pom.xml
+++ b/streampipes-storage-api/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
-        <version>0.65.0</version>
+        <version>0.65.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>streampipes-storage-api</artifactId>
@@ -31,12 +31,12 @@
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-model</artifactId>
-            <version>0.65.0</version>
+            <version>0.65.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-model-client</artifactId>
-            <version>0.65.0</version>
+            <version>0.65.1-SNAPSHOT</version>
         </dependency>
 
         <!-- External dependencies -->
