--- a/streampipes-wrapper-spark/pom.xml
+++ b/streampipes-wrapper-spark/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
-        <version>0.65.0</version>
+        <version>0.65.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>streampipes-wrapper-spark</artifactId>
@@ -106,17 +106,17 @@
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-model</artifactId>
-            <version>0.65.0</version>
+            <version>0.65.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-container</artifactId>
-            <version>0.65.0</version>
+            <version>0.65.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-wrapper</artifactId>
-            <version>0.65.0</version>
+            <version>0.65.1-SNAPSHOT</version>
         </dependency>
 
         <!-- External dependencies -->
