--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,11 @@
     <parent>
         <groupId>org.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
-        <version>0.64.1-SNAPSHOT</version>
+        <version>0.65.0</version>
     </parent>
 
     <artifactId>streampipes-pipeline-elements</artifactId>
-    <version>0.64.1-SNAPSHOT</version>
+    <version>0.65.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
