--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     </parent>
 
     <artifactId>streampipes-pipeline-elements</artifactId>
-    <version>0.65.0-SNAPSHOT</version>
+    <version>0.65.0</version>
     <packaging>pom</packaging>
 
     <modules>
