--- a/streampipes-sources-vehicle-simulator/pom.xml
+++ b/streampipes-sources-vehicle-simulator/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>streampipes-pipeline-elements</artifactId>
         <groupId>org.streampipes</groupId>
-        <version>0.65.0-SNAPSHOT</version>
+        <version>0.65.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.streampipes</groupId>
             <artifactId>streampipes-pipeline-elements-data-simulator</artifactId>
-            <version>0.65.0-SNAPSHOT</version>
+            <version>0.65.0</version>
         </dependency>
 
         <!-- StreamPipes dependencies -->
