--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,7 +109,7 @@ start release:
     - git fetch
     - git checkout master
     - git checkout dev
-    - mvn -B jgitflow:release-start $MAVEN_CLI_OPTS -Drelease=true
+    - mvn -B jgitflow:release-start $MAVEN_CLI_OPTS -Drelease=true -Denforcer.skip
     - git push origin --all
   only:
     - dev
@@ -134,7 +134,7 @@ finish release:
     - git checkout master
     - git checkout dev
     - git checkout $CI_BUILD_REF_NAME
-    - mvn -B jgitflow:release-finish $MAVEN_CLI_OPTS -Drelease=true
+    - mvn -B jgitflow:release-finish $MAVEN_CLI_OPTS -Drelease=true -Denforcer.skip
     - git push origin --all
     - git push origin --tags
     - git checkout master
