--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
             <dependency>
                 <groupId>org.streampipes</groupId>
                 <artifactId>streampipes-connect-container-worker</artifactId>
-                <version>0.64.1-SNAPSHOT</version>
+                <version>${streampipes.version}</version>
             </dependency>
 
             <!-- External dependencies -->
