--- a/templates/optional-external-services/elasticsearch/elasticsearch-pvc.yaml
+++ b/templates/optional-external-services/elasticsearch/elasticsearch-pvc.yaml
@@ -1,12 +1,13 @@
-{{- if eq .Values.deployment "full" }}
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: elasticsearch-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Gi
-{{- end}}
+# TODO: fix - currently not working
+# {{- if eq .Values.deployment "full" }}
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: elasticsearch-pvc
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 5Gi
+# {{- end}}
