--- a/streampipes-connect-adapters/pom.xml
+++ b/streampipes-connect-adapters/pom.xml
@@ -21,7 +21,7 @@
 
     <parent>
         <groupId>org.streampipes</groupId>
-        <artifactId>streampipes-pipeline-elements</artifactId>
+        <artifactId>streampipes-extensions</artifactId>
         <version>0.65.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
