--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,7 @@
     "angular-clipboard": "1.4.2",
     "angular-cookies": "1.7.7",
     "angular-datatables": "0.6.2",
+    "angular-gridster2": "7.2.0",
     "angular-loading-bar": "0.8.0",
     "angular-markdown-directive": "0.3.1",
     "angular-material": "1.1.18",
@@ -72,6 +73,7 @@
     "jszip": "^3.2.1",
     "konva": "^3.2.4",
     "lodash": "3.10.1",
+    "ng-dynamic-component": "4.0.3",
     "ng-file-upload": "9.0.13",
     "ng-pick-datetime": "7.0.0",
     "ng-prettyjson": "0.1.8",
