--- a/streampipes-backend/Dockerfile.arm
+++ b/streampipes-backend/Dockerfile.arm
@@ -1,9 +1,9 @@
-# Licensed to the Apache Software Foundation (ASF) under one or more
-# contributor license agreements.  See the NOTICE file distributed with
-# this work for additional information regarding copyright ownership.
-# The ASF licenses this file to You under the Apache License, Version 2.0
-# (the "License"); you may not use this file except in compliance with
-# the License.  You may obtain a copy of the License at
+#
+# Copyright 2018 FZI Forschungszentrum Informatik
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
 #
 #    http://www.apache.org/licenses/LICENSE-2.0
 #
@@ -12,13 +12,16 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+#
 
-ARG BASE_IMAGE=adoptopenjdk/openjdk8-openj9:alpine-slim
+ARG BASE_IMAGE=arm64v8/adoptopenjdk:11-jre-openj9
 FROM $BASE_IMAGE
 
-EXPOSE 8030
 ENV CONSUL_LOCATION consul
 
+EXPOSE 8030
+
+COPY qemu-arm-static /usr/bin
 ADD ./target/streampipes-backend.jar  /streampipes-backend.jar
 
 ENTRYPOINT ["java", "-jar", "/streampipes-backend.jar"]
