--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,17 +120,17 @@ docker-ui:
     #    - mkdir javadoc && mv target/site/apidocs/* ./javadoc
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $REGISTRY_HOST
     # Build AMD64
-    - docker build --pull --build-arg BASE_IMAGE=$BASE_NGINX_AMD64
+    - docker build --no-cache --pull --build-arg BASE_IMAGE=$BASE_NGINX_AMD64
       -t $IMAGE_NAME/ui:amd64 -t $IMAGE_NAME/ui:amd64-$MVN_VERSION
       -f ./ui/Dockerfile ./ui
     # Build ARMv7
     # Download qemu static and make it executable so it can be used during the docker build phase
     - wget https://github.com/multiarch/qemu-user-static/releases/download/v4.0.0/qemu-arm-static -P ./ui
     - chmod 554 ./ui/qemu-arm-static
-    - docker build --pull --build-arg BASE_IMAGE=$BASE_NGINX_ARM32v7
+    - docker build --no-cache --pull --build-arg BASE_IMAGE=$BASE_NGINX_ARM32v7
       -t $IMAGE_NAME/ui:arm32v7 -t $IMAGE_NAME/ui:arm32v7-$MVN_VERSION
       -f ./ui/Dockerfile.arm ./ui
-    - docker build --pull --build-arg BASE_IMAGE=$BASE_NGINX_ARM64v8
+    - docker build --no-cache --pull --build-arg BASE_IMAGE=$BASE_NGINX_ARM64v8
       -t $IMAGE_NAME/ui:arm64v8 -t $IMAGE_NAME/ui:arm64v8-$MVN_VERSION
       -f ./ui/Dockerfile.arm ./ui
     # Push Docker images: AMD64, ARMv7, ARMv8
