--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,6 +115,7 @@ docker-ui:
     - apk update
     - apk add curl
     - apk add unzip
+    - apk add bash
     #    - 'curl -k -f -L -H "PRIVATE-TOKEN: ${API_KEY}" -o javadoc.zip "https://ipe-wim-gitlab.fzi.de/streampipes/ce/-/jobs/artifacts/dev/download?job=build"'
     #    - unzip javadoc.zip
     #    - mkdir javadoc && mv target/site/apidocs/* ./javadoc
